--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -40,3 +40,9 @@
     border-radius: 100%;
     color: rgb(255, 255, 255, 0.7);
 }
+
+@media (max-width: 950px) {
+    .paginat {
+        bottom: 5px;
+    }
+}
