--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -76,7 +76,7 @@ button {
         height: 15px;
     }
     #input-text {
-        width: 190px;
+        width: 200px !important;
     }
     .paginat {
         bottom: 5px;
